# src/routes/v1/usersRoutes.js
@@ -5,16 +5,18 @@ const userController = require('../../controllers/userController');
 
 userRoutes.get('/users', userController.index);
 userRoutes.get('/user/:id', userController.indexOne);
-userRoutes.post(
-  '/new-user',
-  [check('name').not().isEmpty(), check('email').normalizeEmail().isEmail()],
-  userController.createNewUser
-);
 userRoutes.patch(
   '/user/:id',
   [check('name').not().isEmpty(), check('email').normalizeEmail().isEmail()],
   userController.updateUser
 );
+
+userRoutes.post(
+  '/user',
+  [check('name').not().isEmpty(), check('email').normalizeEmail().isEmail()],
+  userController.createNewUser
+);
+
 userRoutes.delete('/user/:id', userController.deleteUser);
 
 module.exports = userRoutes;
